@startuml
title Diagrama de clases — Simulación concurrente de Red de Petri

left to right direction

skinparam shadowing false
skinparam linetype ortho
skinparam packageStyle rectangle
skinparam classAttributeIconSize 0
skinparam nodesep 35
skinparam ranksep 30
hide empty members

skinparam class {
  BackgroundColor #FFFFFF
  BorderColor #495057
  ArrowColor #495057
  FontColor #212529
}

skinparam package {
  BorderColor #495057
  FontColor #212529
}

package "Aplicación" #E7F1FF {
  class Main {
    -{static} TOTAL_RUNS : int
    -{static} POLICY_MODE : PolicyMode

    +{static} main(args : String[]) : void
    -{static} createWorkers(...) : Thread[]
  }

  class "Main::WorkerSpec" as WorkerSpec <<record>> {
    -name : String
    -path : List<Integer>
    -countsCompletion : boolean
  }

  class Threads <<Runnable>> {
    -path : List<Integer>
    -monitor : MonitorInterface
    -completedInvariants : AtomicInteger
    -countsCompletion : boolean
    -running : AtomicBoolean

    +run() : void
  }

  class ProgressBar <<presentation>> {
    -total : int
    -completed : AtomicInteger
    +update() : void
    +close() : void
  }
}

package "Monitor concurrente" #FFF3CD {
  interface MonitorInterface {
    +fireTransition(transition : int) : boolean
  }

  class Monitor {
    -entry : Semaphore
    -queues : Queues
    -rdp : RdP
    -policy : Policy
    -time : TimeRestrictions
    -log : LogService

    ~Monitor(rdp : RdP, log : LogService, policy : Policy)
    +fireTransition(transition : int) : boolean
    -waitForSensitization(...)
    -fireAndReleaseTransition(...)
    -wakingCandidates() : List<Integer>
    -selectWaiterOrRelease(...)
  }

  class "Monitor::Ownership" as Ownership <<inner>> {
    -owned : boolean

    +acquire() : void
    +release() : void
    +handoff() : void
    +wakeFromQueue() : void
  }

  class "Monitor::Queues" as Queues <<inner>> {
    -waitingCount : DMatrixRMaj

    -incrementWaitingCount(transition : int) : void
    -hasWaiters(transition : int) : boolean
    -signalOne(transition : int) : void
  }
}

package "Modelo de Red de Petri" #E8F5E9 {
  class RdP {
    -MarcadoActual : DMatrixRMaj
    -Incidencia : DMatrixRMaj
    -Sensibilizadas : DMatrixRMaj

    +fireTransition(firingVector : DMatrixRMaj) : void
    +isSensitized(transition : int) : boolean
    -transicionesSensibilizadas() : void
  }

  class TimeRestrictions {
    +{static} INFINITE_BETA : long
    -timedTransitions : Map<Integer, TimingConfig>
    -runtimeStates : Map<Integer, RuntimeState>
    -clockNs : LongSupplier

    +refreshTimedState(...)
    -refreshTransitionState(...)
    +canFire(transition : int) : boolean
    +getRemainingToEFT(transition : int) : long
    ~awaitUntilEFT(transition : int) : void
  }
}

package "Política" #F3E5F5 {
  class Policy {
    -mode : PolicyMode
    -agentResidue : int
    -reservationResidue : int

    +choose(candidates : List<Integer>) : int
    +recordFire(transition : int) : void
    -selectByPercentage(group : ConflictGroup) : int
    +printSummary() : void
  }

  enum "Policy::PolicyMode" as PolicyMode {
    NONE
    BALANCED
    PRIORITIZED
  }

  enum "Policy::ConflictGroup" as ConflictGroup {
    AGENTS
    RESERVATIONS
    NONE
  }
}

package "Observabilidad" #F1F3F5 {
  class Invariants <<utility>> {
    +{static} defaultPInvariants() : List<PInvariant>
    +{static} checkPInvariants(...) : List<PInvariantResult>
  }

  class "Invariants::PInvariant" as PInvariant {
    +name : String
    +places : int[]
    +expected : int
  }

  class "Invariants::PInvariantResult" as PInvariantResult <<record>>

  class LogService <<AutoCloseable>> {
    +logFire(...)
    +logEvent(...)
    +close() : void
  }
}

' Relaciones de la aplicación
Main +-- WorkerSpec
Main ..> Threads : crea
Main ..> ProgressBar : muestra
Main ..> Monitor : configura
Main ..> RdP
Main ..> Policy
Main ..> LogService

' Relaciones del monitor
MonitorInterface <|.. Monitor
Threads --> MonitorInterface : solicita disparos
Monitor --> RdP : consulta y dispara
Monitor --> Policy : selecciona waiter
Monitor *-- TimeRestrictions
Monitor *-- Queues
Monitor *-- Ownership
Monitor --> LogService : registra
Monitor ..> Invariants : verifica

' Relaciones de política y observabilidad
Policy --> PolicyMode
Policy ..> ConflictGroup
Invariants +-- PInvariant
Invariants +-- PInvariantResult

' Guías de layout: no agregan dependencia conceptual.
Main -[hidden]right-> Monitor
Monitor -[hidden]right-> RdP
RdP -[hidden]right-> Invariants
Policy -[hidden]down-> LogService

note right of Monitor
  Signal and Exit:
  sin candidatos, libera entry;
  con candidatos, despierta un waiter
  y transfiere ownership mediante handoff.
end note

note right of Policy
  NONE: selección aleatoria.
  BALANCED: 50/50.
  PRIORITIZED: T2=75%, T6=80%.

  La proporción se aplica sólo
  sobre conflictos reales.
end note

note right of TimeRestrictions
  alpha comienza al sensibilizarse.
  Una habilitación persistente conserva
  su reloj; un disparo reinicia su nueva
  instancia temporal.
  La configuración vigente usa beta infinito.
end note

@enduml
